--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -21,3 +21,13 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Ignore node_modules
+node_modules/
+
+# Ignore env files
+.env
+
+# Ignore build files
+build/
+dist/
